manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: service-tradeadviser
spec:
  selector:
    app: tradeadviser
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 31100
